--- a/app/brokers/(1-concepts)/broker-vault-swaps/page.mdx
+++ b/app/brokers/(1-concepts)/broker-vault-swaps/page.mdx
@@ -13,12 +13,12 @@ import { Callout } from "nextra/components";
 As described so far, initiating a swap involves requesting a deposit address and sending funds to that deposit address to trigger the swap. Here we introduce an alternative way to initiate swaps on Chainflip by making a direct deposit to the Chainflip Vault.
 
 <Callout type="info">
-Learn more in [How Swapping Works](/swapping/how-swapping-works.mdx).
+Learn more in [How Swapping Works](/protocol/how-swapping-works).
 </Callout>
 
 ### Pros and Cons
 
-With some minor exceptions noted below, Vault Swaps support the same features as those initiated via [Deposit Channels](/concepts/swaps-amm/deposit-channels-and-brokers.mdx#deposit-channels).
+With some minor exceptions noted below, Vault Swaps support the same features as those initiated via [Deposit Channels](/brokers/broker-deposit-channels-swaps#deposit-channels).
 
 The major benefit of a Vault Swap is that it can be presented to the end-user for submission almost immediately, whereas creation of a deposit channel requires first submitting a transaction to the Chainflip network, and waiting for finality, which can take up to 18 seconds.
 
