--- a/app/brokers/(2-guides)/how-to-register-as-broker/page.mdx
+++ b/app/brokers/(2-guides)/how-to-register-as-broker/page.mdx
@@ -9,7 +9,7 @@ description: guide on How to register as Broker
 
 ## Broker Role
 
-Brokers forward users' swap requests to the network, paying transaction fees on their behalf and potentially taking a commission for each swap. Successful brokers need to provide and market a swapping interface and ensure they are resistant to spam attacks. See our section on [brokers](../running-a-broker/introduction) for further information.
+Brokers forward users' swap requests to the network, paying transaction fees on their behalf and potentially taking a commission for each swap. Successful brokers need to provide and market a swapping interface and ensure they are resistant to spam attacks. See our section on [brokers](/brokers/running-broker-api) for further information.
 
 Brokers need to **register** their account for the Broker role to gain access to swap-related functionality.
 
