--- a/app/protocol/(1-concepts)/protocol-overview/page.mdx
+++ b/app/protocol/(1-concepts)/protocol-overview/page.mdx
@@ -21,15 +21,15 @@ It is based on the [Polkadot Substrate](https://polkadot.com/platform/sdk/) bloc
 
 The State Chain serves as the core database for all activity occurring in the Chainflip protocol. All protocol events are recorded, executed, or triggered by the State Chain. This covers almost everything, including, but not limited to:
 
-* [Validator Auctions](validator-auctions-bonds-and-rewards#auctions) and Authority Set selection
-* [Vault Rotations](validator-auctions-bonds-and-rewards#performing-key-generation--rotation-after-an-auction) through each stage
-* [Slashing and Validator Reputation](reputation-and-slashing.md)
-* Opening and closing [Deposit Channels](ingress-witnessing-deposits.md)
-* [Witnessing](ingress-witnessing-deposits#witnessing) consensus
-* [Broadcasting](egress-broadcasting-funds.md) consensus
-* The[ JIT AMM](../swaps-amm/just-in-time-amm-protocol.md) and all of the swaps that are conducted natively through the protocol
-* [Emissions](../components/incentive-design-emission-and-burning#emissions) and [Fee collection](../components/incentive-design-emission-and-burning#the-network-fee)
-* [Governance](../components/governance-and-security.md)
+* [Validator Auctions](/validators/validator-auctions-bonds-and-rewards#auctions) and Authority Set selection
+* [Vault Rotations](/validators/validator-auctions-bonds-and-rewards#performing-key-generation--rotation-after-an-auction) through each stage
+* [Slashing and Validator Reputation](/validators/reputation-and-slashing)
+* Opening and closing [Deposit Channels](/protocol/ingress-witnessing-deposits)
+* [Witnessing](/protocol/ingress-witnessing-deposits#witnessing) consensus
+* [Broadcasting](/protocol/egress-broadcasting-funds) consensus
+* The[ JIT AMM](/protocol/just-in-time-amm-protocol) and all of the swaps that are conducted natively through the protocol
+* [Emissions](/protocol/token-economics/incentive-design-emission-and-burning#emissions) and [Fee collection](/protocol/token-economics/incentive-design-emission-and-burning#the-network-fee)
+* [Governance](/protocol/governance-and-security)
 
 Utilising the State Chain instead of depending on an externally operated L1, L2, or other broadly applicable blockchain offers significant benefits for the protocol, such as:
 
@@ -42,9 +42,9 @@ Utilising the State Chain instead of depending on an externally operated L1, L2,
 
 In practice, the codebase has no such thing as an 'accounting' or 'settlement' layer, but explaining the system into two layers is a helpful way to conceptualise its structure.
 
-The assets used for trading are held in the Vaults on chains such as Ethereum, Bitcoin, and so on, with all of the trading and account-keeping occurring on the State Chain. This means that swap execution and [AMM design can be heavily customised ](swaps-amm/just-in-time-amm-protocol.md)for the specific use case of cross-chain value transfer.
+The assets used for trading are held in the Vaults on chains such as Ethereum, Bitcoin, and so on, with all of the trading and account-keeping occurring on the State Chain. This means that swap execution and [AMM design can be heavily customised ](/protocol/just-in-time-amm-protocol)for the specific use case of cross-chain value transfer.
 
-The protocol's accounting is fully contained in the [**State Chain**](validator-network/the-state-chain.md), and includes the [**Chainflip Just In Time (JIT) AMM**](swaps-amm/just-in-time-amm-protocol.md)**.** It is based on the Uniswap v3 AMM design, but unlike Uniswap v3, the JIT AMM is not represented as a series of smart contracts on a single blockchain environment. Rather, the JIT AMM is **virtual**. This means that funds are not held directly in on-chain pools using wrapped assets, but instead traded virtually on the State Chain as account balances, and settled using the actual assets held natively in Vaults by the protocol.
+The protocol's accounting is fully contained in the [**State Chain**](/protocol/protocol-overview#the-state-chain), and includes the [**Chainflip Just In Time (JIT) AMM**](/protocol/just-in-time-amm-protocol)**.** It is based on the Uniswap v3 AMM design, but unlike Uniswap v3, the JIT AMM is not represented as a series of smart contracts on a single blockchain environment. Rather, the JIT AMM is **virtual**. This means that funds are not held directly in on-chain pools using wrapped assets, but instead traded virtually on the State Chain as account balances, and settled using the actual assets held natively in Vaults by the protocol.
 This works in a similar fashion to how centralised cryptocurrency exchanges store all of the deposits in a unified wallet system, with the balances of individual users tracked in separate accounting and trading systems.
 
 ![Overview of the flow of funds](public/concepts/systemdiagram.jpg)
@@ -56,7 +56,7 @@ Trading and tracking assets virtually on the State Chain dramatically simplifies
 A Validator, in the context of Chainflip, is a server operating a **Chainflip State Chain node**, as well as additional ‘sidecar’ functionality through the **Chainflip Engine (CFE)**, an off-chain processing module. For the purposes of introduction, at a high level:
 
 - Up to 150 Validators can participate in the protocol’s **Authority Set** at any one time, and collectively operate almost all of the protocol's functions concurrently, and jointly control _all_ funds in the system.
-- All Validator slots are entirely permissionless, where any Validator operator with sufficient $FLIP to outbid others in [Auctions](validator-network/validator-auctions-bonds-and-rewards.md) becomes a member of the Authority Set after winning.&#x20;
+- All Validator slots are entirely permissionless, where any Validator operator with sufficient $FLIP to outbid others in [Auctions](/validators/validator-auctions-bonds-and-rewards) becomes a member of the Authority Set after winning.&#x20;
 - Each individual Validator has its own set of private keys which it uses to participate in the consensus of the State Chain, as well as to generate secrets for the purposes of TSS key generation and signing.
 - Every Validator simultaneously watches all supported external chains for **Witnessing**, which is functionally equivalent to the network being its own decentralised oracle for incoming transfers.
 - Using the TSS protocol in chorus with the other Validators and the external blockchain connections, Validators also **Broadcast** transactions to send funds out of the protocol. Again, the network is its own decentralised relayer.
@@ -70,7 +70,7 @@ Validators in the **Authority Set** perform the following functions:
   - Participate in TSS Signing ceremonies to construct valid transactions for external blockchains, and broadcasting those signed transactions to the mempools of those external networks (**Broadcasting/Egress)**.
   - Monitoring and Parsing incoming transactions to vaults on external chains to be Witnessed on the State Chain. (**Witnessing/Ingress**)
 
-Validators are covered in more detail in the [Validator Types & States](validator-network/validator-types-and-states.md) section. With this high-level overview of the network laid out, let’s use it to understand more components and how they come together to solve the cross-chain swapping problem.
+Validators are covered in more detail in the [Validator Types & States](/validators/validator-types-and-states) section. With this high-level overview of the network laid out, let’s use it to understand more components and how they come together to solve the cross-chain swapping problem.
 
 ### Constructing Vaults
 
@@ -82,12 +82,12 @@ Fundamental to any native asset swap flow is for there to be a pool of liquid na
 
 A **Vault** is a method of storing funds on a given blockchain that is controlled by the Chainflip protocol. This could come in a few forms, with different blockchains offering different features and limitations, but broadly there are two categories of vault which are used to store funds to be used in the AMM:
 
-- **Vault Contract:** A [smart contract (EVM or non-EVM)](./components/evm-ethereum-vault-design.mdx) that holds a pool of assets on a given chain. The Vault smart contract can send funds with the approval of an aggregate key held in the KeyManager contract. The aggregate key is controlled by the Authority Set in a 100 of 150 threshold signature scheme (FROST) handled off-chain. When the Authority Set is changing, the old Authority Set approves a transaction that changes the aggregate key from the outgoing Authority Set to the new aggregate key, controlled by the new Authority Set in the KeyManager contract.
-- **Native Wallet Vaults:** A native wallet or set of wallets controlled by the Authority Set in a 100 of 150 threshold signature scheme and is handled off-chain. As with the vault contract above, the native wallet vault still relies on the FROST threshold signature scheme to function. The details of the native wallets vary from blockchain to blockchain, but rely on native multisig schemes offered as features on each blockchain. Funds are held in each Native Wallet Vault until a new Authority Set is determined, after which a **Vault Rotation** occurs. This could involve the old Authority Set delegating access to the Vault Account on-chain, or the new Authority Set will create its own Native Wallet Vault, and the outgoing Authority Set will hand over their keyshares to the new set and sweep funds from its own Wallet Vault into the new one. For an example of this in practice, check out the [Bitcoin Vault](components/bitcoin-vault-design.md) page.
+- **Vault Contract:** A [smart contract (EVM or non-EVM)](/protocol/vaults/evm-ethereum-vault-design) that holds a pool of assets on a given chain. The Vault smart contract can send funds with the approval of an aggregate key held in the KeyManager contract. The aggregate key is controlled by the Authority Set in a 100 of 150 threshold signature scheme (FROST) handled off-chain. When the Authority Set is changing, the old Authority Set approves a transaction that changes the aggregate key from the outgoing Authority Set to the new aggregate key, controlled by the new Authority Set in the KeyManager contract.
+- **Native Wallet Vaults:** A native wallet or set of wallets controlled by the Authority Set in a 100 of 150 threshold signature scheme and is handled off-chain. As with the vault contract above, the native wallet vault still relies on the FROST threshold signature scheme to function. The details of the native wallets vary from blockchain to blockchain, but rely on native multisig schemes offered as features on each blockchain. Funds are held in each Native Wallet Vault until a new Authority Set is determined, after which a **Vault Rotation** occurs. This could involve the old Authority Set delegating access to the Vault Account on-chain, or the new Authority Set will create its own Native Wallet Vault, and the outgoing Authority Set will hand over their keyshares to the new set and sweep funds from its own Wallet Vault into the new one. For an example of this in practice, check out the [Bitcoin Vault](/protocol/vaults/bitcoin-vault-design) page.
 
 Although not used for liquidity pools, there is also a third protocol-controlled vault-like contract that fills a special function called the:
 
-- **State Chain Gateway Contract:** The [**State Chain Gateway**](./validator-network/state-chain-flip-gateway.mdx) is a smart contract (initially just on the Ethereum network) which holds \$FLIP funds as collateral for accounts on the State Chain. Like the Vault Contract & Native Wallet Vaults, signature verification is delegated to the KeyManager contract, which verifies an aggregate signature produced by the current Authority Set. Unlike the Vault Contract, users directly interact with this contract, but can only redeem $FLIP from this contract with a valid signature from the aggregate key - or in other words, with the off-chain approval through a transaction signed by the Authority Set.
+- **State Chain Gateway Contract:** The [**State Chain Gateway**](/protocol/funding-state-chain-account#state-chain-flip-gateway) is a smart contract (initially just on the Ethereum network) which holds \$FLIP funds as collateral for accounts on the State Chain. Like the Vault Contract & Native Wallet Vaults, signature verification is delegated to the KeyManager contract, which verifies an aggregate signature produced by the current Authority Set. Unlike the Vault Contract, users directly interact with this contract, but can only redeem $FLIP from this contract with a valid signature from the aggregate key - or in other words, with the off-chain approval through a transaction signed by the Authority Set.
 
 In all of these cases, a new Authority Set must perform all of the necessary key-generation ceremonies for all deployed vaults before authority over the State Chain consensus, Vaults, and the State Chain Gateway contract are handed over.
 
