--- a/app/protocol/(2-guides)/funding-state-chain-account/page.mdx
+++ b/app/protocol/(2-guides)/funding-state-chain-account/page.mdx
@@ -10,9 +10,9 @@ description: $FLIP is issued as an ERC-20 token on Ethereum. This means that in 
 
 $FLIP is issued as an ERC-20 token on Ethereum. This means that in order to acquire a balance on the Chainflip State Chain, users have to **fund their State Chain account** in the *StateChainGateway* smart contract.
 
-State Chain accounts are used to submit extrinsics on the network (such as [liquidity updates](../swaps-amm/liquidity-provider-accounts.md#managing-liquidity-positions) and [Broker transactions](../swaps-amm/deposit-channels-and-brokers.md)) and participate in [Validator auctions](validator-auctions-bonds-and-rewards#auctions) and [Governance](../components/governance-and-security.md).&#x20;
+State Chain accounts are used to submit extrinsics on the network (such as [liquidity updates](/lp/how-to-provide-liquidity#managing-liquidity-positions-1) and [Broker transactions](/brokers/deposit-channels-swaps)) and participate in [Validator auctions](/validators/validator-auctions-bonds-and-rewards#auctions) and [Governance](/protocol/governance-and-security).&#x20;
 
-## The Gateway
+## State Chain FLIP Gateway
 
 The *StateChainGateway* contract is monitored by the network. It allows the network to mint and burn ERC-20 \$FLIP based on the balance of accounts it is tracking on the State Chain. As Validators earn rewards, and fees are collected and FLIP is burned, these supply updates are fairly closely reflected with the total ERC-20 tokens held in the Gateway.
 
@@ -48,6 +48,6 @@ The steps to redeem $FLIP are as follows:
    Note, redemptions have a defined expiry time. \
    If the expiry time elapses, the redemption can no longer be finalised. Instead, calling the `executeRedemption` contract function will revert the operation. The authority set witnesses this and the funds are credited back to the originating account on the State Chain.&#x20;
 
-The delay mechanism exists as a fail-safe for the (hopefully!) unlikely event of a supermajority attack or software exploit that would allow an attacker to craft a fraudulent withdrawal request. Additional governance mechanisms exist to prevent and mitigate the severity of attacks and exploits. For more details, see [Governance and Security](../components/governance-and-security.md).&#x20;
+The delay mechanism exists as a fail-safe for the (hopefully!) unlikely event of a supermajority attack or software exploit that would allow an attacker to craft a fraudulent withdrawal request. Additional governance mechanisms exist to prevent and mitigate the severity of attacks and exploits. For more details, see [Governance and Security](/protocol/governance-and-security).&#x20;
 
-{/* For more detailed information on the implementation of the funding and redeeming features of the State Chain Gateway smart contract see [StateChain Gateway](../../swapping/integration/evm-integrations/advanced/statechain-gateway.mdx). */}
+{/* For more detailed information on the implementation of the funding and redeeming features of the State Chain Gateway smart contract see [StateChain Gateway](/protocol/funding-state-chain-account#state-chain-flip-gateway). */}
