--- a/app/validators/(1-concepts)/validator-types-and-states/page.mdx
+++ b/app/validators/(1-concepts)/validator-types-and-states/page.mdx
@@ -10,7 +10,7 @@ description: This page is intended to explain what the different states of a Val
 
 This page is intended to explain what the different states of a Validator are possible in the Chainflip system, and what each of them means.
 
-It is important to note that a Validator does not refer to just any node on the Chainflip State Chain network. In contrast to State Chain Client operators, who may be using them for [liquidity management](../swaps-amm/just-in-time-amm-protocol.md), [running a Broker](../swaps-amm/deposit-channels-and-brokers#brokers), or simply monitoring the State Chain for data, a Validator, a node **must also run the Chainflip Engine (CFE)** sidecar module and have **configured endpoints** for all external chains, as well as set their State Chain **account type** to Validator.
+It is important to note that a Validator does not refer to just any node on the Chainflip State Chain network. In contrast to State Chain Client operators, who may be using them for [liquidity management](/protocol/just-in-time-amm-protocol), [running a Broker](../swaps-amm/deposit-channels-and-brokers#brokers), or simply monitoring the State Chain for data, a Validator, a node **must also run the Chainflip Engine (CFE)** sidecar module and have **configured endpoints** for all external chains, as well as set their State Chain **account type** to Validator.
 
 This page should help operators understand how to set their Validator state to participate in auctions and manage their system accordingly.
 
@@ -37,7 +37,7 @@ This page should help operators understand how to set their Validator state to p
             <li>Account Role is Validator</li>
             <li>
               <strong>Online</strong> (
-              <a href="/concepts/validator-network/reputation-and-slashing#heartbeats--positive-reputation-">
+              <a href="/validators/reputation-and-slashing#heartbeats--positive-reputation-">
                 based on last heartbeat submission
               </a>
               )
@@ -100,7 +100,7 @@ This page should help operators understand how to set their Validator state to p
         <td>
           A Backup validator earns FLIP rewards but does not participate in
           block authorship. See{" "}
-          <a href="/concepts/validator-network/validator-auctions-bonds-and-rewards#backup-rewards">
+          <a href="/validators/validator-auctions-bonds-and-rewards#backup-rewards">
             Backup Rewards
           </a>{" "}
           section.
@@ -138,13 +138,13 @@ This page should help operators understand how to set their Validator state to p
             Authorities are responsible for block authorship and consensus,
             witnessing, threshold signing and transaction broadcasting. In
             return they earn{" "}
-            <a href="/concepts/validator-network/validator-auctions-bonds-and-rewards#authority-rewards">
+            <a href="/validators/validator-auctions-bonds-and-rewards#authority-rewards">
               Authority Rewards
             </a>
           </p>
           <p>
             <br />
-            Authorities are <a href="/concepts/validator-network/validator-auctions-bonds-and-rewards#bonds">
+            Authorities are <a href="/validators/validator-auctions-bonds-and-rewards#bonds">
               Bonded
             </a> according to the auction preceding the KeyGen ceremony for the held
             key.
