--- a/app/validators/(2-guides)/mainnet/important-notes/page.mdx
+++ b/app/validators/(2-guides)/mainnet/important-notes/page.mdx
@@ -13,7 +13,7 @@ import { Callout } from "nextra/components";
 We highly recommend reading our docs thoroughly to understand how the Chainflip network operates.
 
 - [Concepts](../../../concepts/welcome)
-- [The Validator Network](../../../concepts/validator-network/the-state-chain)
+- [The Validator Network](/protocol/protocol-overview#the-state-chain)
 
 ## Applying changes to your Node or Engine
 
