--- a/app/validators/(2-guides)/testnet/validator-setup/page.mdx
+++ b/app/validators/(2-guides)/testnet/validator-setup/page.mdx
@@ -42,7 +42,7 @@ We highly advise **against** using a digital wallet that has any real funds in t
 
 You'll need two Ethereum Accounts:
 1. The first one (we will refer to it as (_**your**_ _**Wallet/Account**_) will be used for receiving `tFLIP` and Interacting with the Auctions App to add and redeem funds.
-2. The second one (we will refer to it as the (_**Validator Wallet/Account**_) will be used by the validator to send transactions to the Sepolia Ethereum blockchain (this will be automatically generated as part of [Generating Keys](#keys.md)).
+2. The second one (we will refer to it as the (_**Validator Wallet/Account**_) will be used by the validator to send transactions to the Sepolia Ethereum blockchain (this will be automatically generated as part of [Generating Keys](#validator-keys)).
 
 **sETH (Sepolia Ether)**
 
