--- a/app/brokers/(1-concepts)/broker-account/page.mdx
+++ b/app/brokers/(1-concepts)/broker-account/page.mdx
@@ -10,7 +10,7 @@ description: Chainflip uses the concept of Account Roles to manage permissions b
 
 Chainflip uses the concept of Account Roles to manage permissions between various network actors. Every account on the Chainflip network can go through the lifecycle.
 
-Upon [Funding](funding.mdx) your account, your account will be created without any defined role. This account state is known as `Unregistered`. Unregistered accounts have access to basic functionality on the State Chain, such as redeeming funds and participating in tokenholder governance.
+Upon [Funding](#funding) your account, your account will be created without any defined role. This account state is known as `Unregistered`. Unregistered accounts have access to basic functionality on the State Chain, such as redeeming funds and participating in tokenholder governance.
 
 In order to integrate in the network, you will need to **register** the account for the `Liquidity Provider` role.
 
@@ -34,13 +34,13 @@ The easiest way to fund your Chainflip account is via the [Auctions application]
 2. Go to [Chainflip Auctions page](https://auctions.chainflip.io/) > "[**My Nodes**](https://auctions.chainflip.io/nodes)".
 3. Connect your crypto wallet containing the `FLIP`.
 4. Click the button "**+ Add Node**" > You should see the "**Register new node**" dialog.
-5. Enter the Validator ID you got during [Generating Keys](/mainnet/validator-setup/keys#validator-keys) step — your `Public Key(SS58)`— and the amount of `FLIP` you want to fund. Click on "**Add Funds**".
+5. Enter the Validator ID you got during [Generating Keys](/validators/mainnet/validator-setup#4-generating-validator-keys) step — your `Public Key(SS58)`— and the amount of `FLIP` you want to fund. Click on "**Add Funds**".
 6. Your crypto wallet will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your account.
 7. Congratulations! Your Chainflip account is now funded.
 
 ### Fund and redeem via State Chain Gateway
 
-As explained in the [State Chain Overview](../../../concepts/validator-network/state-chain-flip-gateway.md), the `StateChainGateway` contract has two main entry points for those looking to interact with the protocol:
+As explained in the [State Chain Overview](/protocol/funding-state-chain-account#state-chain-flip-gateway), the `StateChainGateway` contract has two main entry points for those looking to interact with the protocol:
 1. Funding a State Chain account with \$FLIP tokens
 2. Redeeming \$FLIP tokens from a State Chain account
 
