--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/evm/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/evm/page.mdx
@@ -10,7 +10,7 @@ import { Callout } from "nextra/components";
 
 ## EVM Vault swaps
 
-Initiating a [Vault Swap](vault-swaps#vault-swaps) on an EVM chain (currently Ethereum or Arbitrum) requires making a smart contract call to Chainflip's Vault contract. The contract addresses can be found in [Testnet addresses](/protocol/supported-chains-and-assets/testnet-addresses.mdx) and [Mainnet addresses](/protocol/supported-chains-and-assets/mainnet-addresses.mdx).
+Initiating a [Vault Swap](vault-swaps#vault-swaps) on an EVM chain (currently Ethereum or Arbitrum) requires making a smart contract call to Chainflip's Vault contract. The contract addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
 
 EVM Vault Swaps follow the same pattern mentioned in the [Vault Swaps introduction](/brokers/broker-vault-swaps):
 
@@ -243,9 +243,9 @@ In the case of swapping ERC-20 tokens corresponding token **approval is required
 
 | Param         | Description | Data Type |
 | ------------- | ----------- | --------- |
-| `dstChain`    | Destination [chain ID](./vault-swaps.mdx#supported-chain-and-asset-notation) for the swap. | `uint32`   |
+| `dstChain`    | Destination [chain ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation) for the swap. | `uint32`   |
 | `dstAddress`  | Address where the swapped tokens will be sent to on the destination chain. Addresses must be encoded into a bytes type valid for the destination chain. You can check out a reference on how to do address encoding for each of the chains from our [SDK](https://github.com/chainflip-io/chainflip-sdk-monorepo/blob/67d43db80d734a206dd2a0cc8334cb118c711906/packages/shared/src/vault/executeSwap.ts#L31). | `address` |
-| `dstToken`    | Destination [token](./vault-swaps.mdx#supported-chain-and-asset-notation)| `uint32` |
+| `dstToken`    | Destination [token](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation)| `uint32` |
 | `srcToken`    | Address of the token to be swapped from the source chain. | `address` |
 | `amount`      | Amount of the source token to be swapped. When swapping a native asset, the `msg.value` passed in the call will be used instead. | `uint` |
 | `message`   | Message that is passed to the destination address on the destination chain. It must be shorter than 15k bytes. | `bytes` |
