--- a/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
+++ b/app/brokers/(3-techincal-docs)/vault-swaps-api/solana/page.mdx
@@ -10,7 +10,7 @@ import { Callout } from "nextra/components";
 
 ## Solana Vault Swaps
 
-Initiating a Solana [Vault Swap](vault-swaps#vault-swaps) requires making a program call to Chainflip's Swap Endpoint program. The program addresses can be found in [Testnet addresses](/protocol/supported-chains-and-assets/testnet-addresses.mdx) and [Mainnet addresses](/protocol/supported-chains-and-assets/mainnet-addresses.mdx).
+Initiating a Solana [Vault Swap](vault-swaps#vault-swaps) requires making a program call to Chainflip's Swap Endpoint program. The program addresses can be found in [Testnet addresses](/protocol/supported-chains-assets/testnet-addresses) and [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses).
 
 Solana Vault Swaps follow the same pattern mentioned in the [Vault Swaps introduction](/brokers/broker-vault-swaps):
 
@@ -373,10 +373,10 @@ const txHash = await sendAndConfirmTransaction(connection, tx, [userKeypair]);
 | Param | Description | Data Type |
 |-------|-------------|-----------|
 | `amount` | Amount of the source token to be swapped | `u64` |
-| `dstChain` | Destination [chain ID](./vault-swaps.mdx#supported-chain-and-asset-notation) | `u32` |
+| `dstChain` | Destination [chain ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation) | `u32` |
 | `dstAddress` | Address where the swapped tokens will be sent to on the destination chain. Addresses must be encoded into a bytes type valid for the destination chain. You can check out a reference on how to do address encoding for each of the chains from our [SDK](https://github.com/chainflip-io/chainflip-sdk-monorepo/blob/67d43db80d734a206dd2a0cc8334cb118c711906/packages/shared/src/vault/executeSwap.ts#L31). | `Vec<u8>` |
-| `dstToken` | Destination [token](./vault-swaps.mdx#supported-chain-and-asset-notation).| `u32` |
-| `ccmParameters` | Additional metadata for swaps with Cross-Chain Messaging. Should be set to `None` for simple swaps. See [CCM support](../cross-chain-messaging/sol-ccm.mdx) for more details. | `Option<(message, gasAmount)>` |
+| `dstToken` | Destination [token](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation).| `u32` |
+| `ccmParameters` | Additional metadata for swaps with Cross-Chain Messaging. Should be set to `None` for simple swaps. See [CCM support](/protocol/cross-chain-messaging/sol-ccm) for more details. | `Option<(message, gasAmount)>` |
 | `message` |  Message that is passed to the destination address on the destination chain. It must be shorter than 15k bytes. | `Vec<u8>` |
 | `gasAmount` | Gas budget for the call on the destination chain in gas units or compute units. This amount should cover the execution of the receiver's logic. | `u64` |
 | `cfParameters`| Additional metadata for additional features. It cannot be empty and must be correctly encoded according to [Chainflip Parameters](./encoding-reference#chainflip-parameters-cf_parameters). | `Vec<u8>` |
@@ -387,12 +387,12 @@ const txHash = await sendAndConfirmTransaction(connection, tx, [userKeypair]);
 
 | Account | Description| Account type|
 |---------|------------|-------------|
-| `dataAccount` | Chainflip's Vault Data Account. See  [Mainnet addresses](../../../supported-chains-and-assets/mainnet-addresses). | Data Account |
+| `dataAccount` | Chainflip's Vault Data Account. See  [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses). | Data Account |
 | `nativeVault` | Swap Endpoint Native Vault. Can be derived from the Vault account. | Account |
 | `from` | Address initiating the swap. This account will pay the transaction fees and the input swap amount. | Signer |
 | `eventDataAccount` | Account PDA where the swap data is to be stored. It is derived in part from the seed parameter | Account| 
-| `swapEndpointDataAccount` | Chainflip's Swap Endpoint Data Account. See [Mainnet addresses](../../../supported-chains-and-assets/mainnet-addresses). | Data Account |
+| `swapEndpointDataAccount` | Chainflip's Swap Endpoint Data Account. See [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses). | Data Account |
 | `systemProgram` | Solana System Program Account | Account |
 | `fromTokenAccount` | Token account where the tokens should be transferred from. Normally this is the "from"'s associated token account. This is only needed when swapping tokens. | Signer |
-| `tokenSupportedAccount` | Chainflip's Token Supported Account for the specific token. This is only needed when swapping tokens. Mainnet addresses can be found [here]( [Mainnet addresses](../../../supported-chains-and-assets/mainnet-addresses)). | Data Account |
-| `mint` | Address of the SPL-token to swap. The token should be supported by Chainflip, otherwise the transaction will revert. Mainnet addresses can be found [here]( [Mainnet addresses](../../../supported-chains-and-assets/mainnet-addresses)). | Data Account |
+| `tokenSupportedAccount` | Chainflip's Token Supported Account for the specific token. This is only needed when swapping tokens. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)). | Data Account |
+| `mint` | Address of the SPL-token to swap. The token should be supported by Chainflip, otherwise the transaction will revert. Mainnet addresses can be found [here]( [Mainnet addresses](/protocol/supported-chains-assets/mainnet-addresses)). | Data Account |
