--- a/app/lp/(1-concepts)/lp-account/page.mdx
+++ b/app/lp/(1-concepts)/lp-account/page.mdx
@@ -12,7 +12,7 @@ Chainflip uses the concept of Account Roles to manage permissions between variou
 
 Upon [Funding](#funding-your-account) your account, your account will be created without any defined role. This account state is known as `Unregistered`. Unregistered accounts have access to basic functionality on the State Chain, such as redeeming funds and participating in tokenholder governance.
 
-In order to integrate in the network, you will need to **register** the account for the [Liquidity Provider](lp.mdx) role.
+In order to integrate in the network, you will need to **register** the account for the [Liquidity Provider](/lp/lp-account) role.
 
 When an account has fulfilled its purpose and the owner wishes to redeem all remaining FLIP tokens, its Role needs to be **deregistered** to ensure the account has cleaned up its state, for example withdrawing any assets held on-chain.
 
@@ -27,7 +27,7 @@ TODO: I would explain the various funding ways here: Smart Contract, LP.chainfli
 
 ### Fund and redeem via State Chain Gateway
 
-As explained in the [State Chain Overview](../../../concepts/validator-network/state-chain-flip-gateway.md), the `StateChainGateway` contract has two main entry points for those looking to interact with the protocol:
+As explained in the [State Chain Overview](/protocol/funding-state-chain-account#state-chain-flip-gateway), the `StateChainGateway` contract has two main entry points for those looking to interact with the protocol:
 1. Funding a State Chain account with \$FLIP tokens
 2. Redeeming \$FLIP tokens from a State Chain account
 
