--- a/app/lp/(2-guides)/how-boost-works/page.mdx
+++ b/app/lp/(2-guides)/how-boost-works/page.mdx
@@ -15,7 +15,7 @@ pools id (an asset/fee_tier pair).
 
 ## Adding Boost Funds
 
-A booster (an [LP account](../../concepts/swaps-amm/liquidity-provider-accounts)) may add funds by calling the `add_boost_funds` extrinsic, specifying the pool (asset/fee_tier) and the amount of the target asset they wish to add.
+A booster (an [LP account](/lp#liquidity-providers)) may add funds by calling the `add_boost_funds` extrinsic, specifying the pool (asset/fee_tier) and the amount of the target asset they wish to add.
 
 Provided the booster has sufficient funds in their "free balance", the specified amount will be debited
 from their account and added into the pool's `available_amounts` record next to their account id:
