--- a/app/protocol/(1-concepts)/boost/page.mdx
+++ b/app/protocol/(1-concepts)/boost/page.mdx
@@ -12,7 +12,7 @@ import { Callout } from "nextra/components";
 ## What is Boost?
 
 *Boost* is an exciting new feature designed to speed up the swap times on Chainflip, making your swapping experience faster and more efficient.
-A major pain-point for users is how slow deposits can be, particularly for chains such as Bitcoin where the deposits can take 30+ minutes to finalise due to the protocol's [safety margin](../concepts/validator-network/ingress-witnessing-deposits#the-witness-process). 
+A major pain-point for users is how slow deposits can be, particularly for chains such as Bitcoin where the deposits can take 30+ minutes to finalise due to the protocol's [safety margin](/protocol/ingress-witnessing-deposits#the-witness-process).
 The safety margin is there to protect the protocol's liquidity from re-orgs and ensure that transactions are securely confirmed to avoid potential deficits. 
 
 The *Boost* feature provides a solution to dramatically reduce these wait times without increasing the protocol’s risk.
@@ -55,11 +55,11 @@ Learn more about risks of providing *Boost* liquidity [here](../lp/boost/how-boo
 ### Example: Boost BTC to ETH swap
 
 1. A user states the intention to swap a given amount of BTC to ETH with *Boost* feature enabled
-2. The protocol [opens a *boosteable* Swap Deposit Channel](../concepts/swaps-amm/deposit-channels-and-brokers#opening-deposit-channels) and generates a Bitcoin deposit address
+2. The protocol [opens a *boosteable* Swap Deposit Channel](/brokers/broker-deposit-channels-swaps#opening-deposit-channels) and generates a Bitcoin deposit address
 3. The user sends the desired amount of BTC to the generated deposit address
-4. The protocol attempts to [*Boost* the incoming deposit](../lp/boost/how-boost-works#boosting-a-deposit), by checking the available *Boost* liquidity provided by LPs
+4. The protocol attempts to [*Boost* the incoming deposit](/lp/how-boost-works#boosting-a-deposit), by checking the available *Boost* liquidity provided by LPs
 5. If there is enough collateral in the *Boost* pools, the protocol boosts the deposit **after it has been included in a block (pre-witnessed)**, deducting a small *Boost* fee from the total deposited amount
-6. As soon as the deposit is pre-witnessed and boosted, the swap is triggered by the [JIT AMM](../concepts/swaps-amm/just-in-time-amm-protocol), and [sends the resulting ETH](../concepts/validator-network/egress-broadcasting-funds) to the destination address
+6. As soon as the deposit is pre-witnessed and boosted, the swap is triggered by the [JIT AMM](/protocol/just-in-time-amm-protocol), and [sends the resulting ETH](/protocol/egress-broadcasting-funds) to the destination address
 7. The user receives ETH, saving ±20 minutes of total swap time
 
 <Callout type="warning">
@@ -70,5 +70,5 @@ If there isn't enough collateral in the *Boost* pools, the protocol defaults to 
 
 - The protocol will attempt to Boost *any* amount sent after one block confirmation, if Boost liquidity is available.
 - Boosted deposits are binary — either the entire amount is boosted, or it defaults to a regular block confirmation time
-- There are different Boost pools with different fees. The protocol will [take liquidity from the lowest fee pool to the highest](../lp/boost/how-boost-works#example), resulting in an average final Boost fee.
-- The protocol will only attempt to boost a *second* deposit if the first deposit has been [finalised](../concepts/validator-network/ingress-witnessing-deposits#the-witness-process).
+- There are different Boost pools with different fees. The protocol will [take liquidity from the lowest fee pool to the highest](/lp/how-boost-works#example), resulting in an average final Boost fee.
+- The protocol will only attempt to boost a *second* deposit if the first deposit has been [finalised](/protocol/ingress-witnessing-deposits#the-witness-process).
