--- a/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
+++ b/app/protocol/(3-technical-docs)/cross-chain-messaging/sol-ccm/page.mdx
@@ -33,7 +33,7 @@ Chainflip's Vault will transfer the destination asset's amount to the specified 
 
 | Param | Description | Data type |
 | ----- | ----------- | --------- |
-| `source_chain` | Source [chain ID](../vault-swaps/vault-swaps.mdx#supported-chain-and-asset-notation) for the swap. | u32 |
+| `source_chain` | Source [chain ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation) for the swap. | u32 |
 | `source_address` | Address that initiated the swap on the source chain. Addresses are encoded into a {`Vec<u8>`} type | {`Vec<u8>`} |
 | `message` | Message passed to the receiver program. | {`Vec<u8>`} |
 | `amount` | Amount of the destination asset transferred to the receiver address in the previous instruction. | uint |
@@ -216,7 +216,7 @@ The `ccm_additional_data` is expected to be the `solVersionedCcmAdditionalData`,
 | Param | Description | Data Type |
 | ------| ----------- | --------- |
 | `cf_receiver` | Program address to receive the `cf_receive_*` call from Chainflip protocol. | Pubkey |
-| `additional_accounts` | Destination [asset ID](../vault-swaps/vault-swaps.mdx#supported-chain-and-asset-notation). | Pubkey[] |
+| `additional_accounts` | Destination [asset ID](/brokers/vault-swaps-api/encoding-reference#supported-chain-and-asset-notation). | Pubkey[] |
 | `fallback_address` | The fallback_address" used for the [fallback mechanism](#fallback-mechanism). | Pubkey |
 | `alts` | The ALTs to be used in the egress transaction to minimize transaction length. | Pubkey[] |
 
