--- a/app/protocol/(3-technical-docs)/frost-signature-scheme/page.mdx
+++ b/app/protocol/(3-technical-docs)/frost-signature-scheme/page.mdx
@@ -8,7 +8,7 @@ description: Chainflip’s approach relies on an efficient Threshold Signature S
 
 ## FROST Signature Scheme
 
-The [Egress](../validator-network/egress-broadcasting-funds.md) process, and by extension the entire protocol, relies on the use of shared multisignature keys requiring a two-third majority of the Authority Set. Given the varied nature of blockchains existing today, there is not an optimal solution to achieve scalable 100-of-150 Vaults using only a single approach. Chainflip’s approach relies on an efficient Threshold Signature Scheme and by leveraging features offered on each chain to achieve scalable vaults.
+The [Egress](/protocol/egress-broadcasting-funds) process, and by extension the entire protocol, relies on the use of shared multisignature keys requiring a two-third majority of the Authority Set. Given the varied nature of blockchains existing today, there is not an optimal solution to achieve scalable 100-of-150 Vaults using only a single approach. Chainflip’s approach relies on an efficient Threshold Signature Scheme and by leveraging features offered on each chain to achieve scalable vaults.
 
 In the original Chainflip Whitepaper, we described both the use of [Schnorr based Threshold Signing Schemes](https://crysp.uwaterloo.ca/software/frost/frost-extabs.pdf) and [GG20](https://eprint.iacr.org/2020/540.pdf), the latter being what is currently deployed in THORChain.
 
