--- a/app/protocol/page.mdx
+++ b/app/protocol/page.mdx
@@ -8,9 +8,9 @@ description: For over a decade, the primary method of transferring value between
 
 ## Introduction
 
-This section breaks down the Chainflip protocol in a reasonably detailed manner, but only conceptually! We frequently update this entire site, including the [technical documentation](../mainnet/validator-setup/prerequisites.mdx) to assist you in setting up a Validator.
+This section breaks down the Chainflip protocol in a reasonably detailed manner, but only conceptually! We frequently update this entire site, including the technical documentation to assist you in setting up a Validator.
 
-In Concepts, you will find information about the workings of the [core Chainflip protocol](system-overview.md), the purpose-designed and novel [JIT AMM protocol](swaps-amm/just-in-time-amm-protocol.md), as well as analyses of several other components and cryptoeconomics.&#x20;
+In Concepts, you will find information about the workings of the [core Chainflip protocol](/protocol/protocol-overview), the purpose-designed and novel [JIT AMM protocol](/protocol/just-in-time-amm-protocol), as well as analyses of several other components and cryptoeconomics.&#x20;
 
 ## Thesis
 
