--- a/app/validators/(2-guides)/mainnet/funding/page.mdx
+++ b/app/validators/(2-guides)/mainnet/funding/page.mdx
@@ -19,7 +19,7 @@ In order to fund your account, you should use the Auctions App. You could also i
 2. Go to [Chainflip Auctions page](https://auctions.chainflip.io/) > "[**My Nodes**](https://auctions.chainflip.io/nodes)".
 3. Connect your crypto wallet containing the `$FLIP`.
 4. Click the button "**+ Add Node**" > You should see the "**Register new node**" dialog.
-5. Enter the Validator ID you got during [Generating Keys](../validator-setup/keys.md) step — your `Public Key(SS58)`— and the amount of `$FLIP` you want to fund. Click on "**Add Funds**".
+5. Enter the Validator ID you got during [Generating Keys](/validators/mainnet/validator-setup#validator-keys) step — your `Public Key(SS58)`— and the amount of `$FLIP` you want to fund. Click on "**Add Funds**".
 6. Your crypto wallet will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your validator.
 7. Once you have successfully funded your account, jump back to your terminal and run the following:
 
@@ -137,7 +137,7 @@ Options:
 
 You can redeem your `$FLIP`, subject to certain conditions. In order to do so, the funds may neither be bonded, nor tied up in auction bidding.
 
-For a detailed account of the process and its restrictions see [Redeeming ERC-20 `$FLIP` through the Gateway](../../../concepts/validator-network/state-chain-flip-gateway.mdx#redeeming-erc-20-flip-through-the-gateway).
+For a detailed account of the process and its restrictions see [Redeeming ERC-20 `$FLIP` through the Gateway](/protocol/funding-state-chain-account#redeeming-erc-20-flip-through-the-gateway).
 
 ### Retiring from Auctions
 
