--- a/app/validators/(2-guides)/mainnet/validator-setup/page.mdx
+++ b/app/validators/(2-guides)/mainnet/validator-setup/page.mdx
@@ -39,7 +39,7 @@ This section describes what you are going to need to successfully set up a Chain
 ### Tokens
 
 <Callout type="warning">
-    Note there is a **minimum funding requirement** for new Validator nodes: new nodes must have a balance of at least 10% of the current [Bond](../../../concepts/validator-network/validator-auctions-bonds-and-rewards#bonds). Please ensure you have access to enough `$FLIP` to run a node before continuing this process.
+    Note there is a **minimum funding requirement** for new Validator nodes: new nodes must have a balance of at least 10% of the current [Bond](/validators/validator-auctions-bonds-and-rewards#bonds). Please ensure you have access to enough `$FLIP` to run a node before continuing this process.
 </Callout>
 
 **ETH (Mainnet)**
