--- a/app/validators/(2-guides)/testnet/funding/page.mdx
+++ b/app/validators/(2-guides)/testnet/funding/page.mdx
@@ -29,7 +29,7 @@ The current amount of `tFLIP` required to become an Active Validator can be chec
 **To get `tFLIP`:**
 
 - Go to [🔀 | tflip-marketplace](https://discord.com/channels/824147014140952596/1045323960339935342) on Discord.
-- Send a message containing your **Node Public Key** and you wallet address. You should have gotten this ID during the setup process in the [Generating Keys](../validator-setup/keys.md) section of the docs.
+- Send a message containing your **Node Public Key** and you wallet address. You should have gotten this ID during the setup process in the [Generating Keys](/validators/mainnet/validator-setup#validator-keys) section of the docs.
 - We will send you `tFLIP` after verifying you have setup a node.
 
 </Callout>
@@ -54,7 +54,7 @@ In order to fund your account, you should use the Auctions App. You could also i
 2. Go to [Chainflip Auctions page](https://auctions.perseverance.chainflip.io/) > "**My Nodes**"
 3. Connect your Metamask wallet with the `tFLIP`
 4. Click the button "**+ Add Node**" > You should see the "**Register new node**" modal
-5. Enter the Validator ID you got during [Generating Keys](../validator-setup/keys.md) step — your `Public Key(SS58)`— and the amount of `tFLIP` you want to add funds to. Click on "**Add Funds**"
+5. Enter the Validator ID you got during [Generating Keys](/validators/mainnet/validator-setup#validator-keys) step — your `Public Key(SS58)`— and the amount of `tFLIP` you want to add funds to. Click on "**Add Funds**"
 6. Metamask will ask you to sign two transactions. The first one is a token approval and the second one transfers and add funds to your validator.
 7. Congratulations! You should see the new node on "**My Nodes**" page
 8. Once you have successfully funded your account, jump back to your terminal and run the following:
@@ -171,7 +171,7 @@ Options:
 
 You can redeem your `tFLIP`, subject to certain conditions. In order to do so, the funds may neither be bonded, nor tied up in auction bidding.
 
-For a detailed account of the process and its restrictions see [Redeeming ERC-20 `$FLIP` through the Gateway](../../../concepts/validator-network/state-chain-flip-gateway.mdx#redeeming-erc-20-flip-through-the-gateway).
+For a detailed account of the process and its restrictions see [Redeeming ERC-20 `$FLIP` through the Gateway](/protocol/funding-state-chain-account#redeeming-erc-20-flip-through-the-gateway).
 
 ### Retiring from Auctions
 
