--- a/app/validators/(3-technical-docs)/maintenance/page.mdx
+++ b/app/validators/(3-technical-docs)/maintenance/page.mdx
@@ -66,7 +66,7 @@ Returns the current filtering directives:
 curl -X GET 127.0.0.1:36079/tracing
 ```
 
-> Note: The port used by the engine to accept these queries can be configured in your [`Settings.toml` file](../validator-setup/engine-settings.mdx).
+> Note: The port used by the engine to accept these queries can be configured in your [`Settings.toml` file](/validators/mainnet/validator-setup#5-engine-settings).
 
 Sets the filter directives so the default is DEBUG, and the logging in modules warp, hyper, jsonrpc, web3, and reqwest is turned off:
 
@@ -95,7 +95,7 @@ One of your amazing community members has developed this guide. After you have c
 
 The engine database contains the threshold signing keyshares of your validator. Thus, you should backup this database before you start the migration process, and ensure you keep it stored safely and securely.
 
-`/etc/chainflip/data.db` is the default location. If you have changed the location, please adjust the path accordingly. The path the engine uses for it's database is specified in the [Engine Settings](../validator-setup/engine-settings.md) section.
+`/etc/chainflip/data.db` is the default location. If you have changed the location, please adjust the path accordingly. The path the engine uses for it's database is specified in the [Engine Settings](/validators/mainnet/validator-setup#5-engine-settings) section.
 
 ```toml
 # Optional
@@ -251,5 +251,5 @@ sudo apt purge chainflip-engine
 
 **On the **<span style={{ color: "green"}}>**New**</span>** VPS**
 
-1. Setup the config file as explained in [Engine Settings](../validator-setup/engine-settings.md) section.
-2. Then start the node and engine services as explained in [Start up](../validator-setup/starting-the-node.md) section.
+1. Setup the config file as explained in [Engine Settings](/validators/mainnet/validator-setup#5-engine-settings) section.
+2. Then start the node and engine services as explained in [Start up](/validators/mainnet/validator-setup#starting-the-node) section.
